--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
         "grpc/grpc": "^1.30.0",
         "google/protobuf": "^v3.13.0",
         "google/cloud-firestore": "^1.14.1",
-        "laravel/framework": "^5.8||^6.0||^7.0"
+        "laravel/framework": "^5.8||^6.0||^7.0||^8.0"
     },
     "license": "MIT",
     "authors": [
